feat(operator): add NodePort support and StellarNode CRD
- Add CustomResourceDefinition for StellarNode with NodePort configuration
- Include example configs and test resources for NodePort setup
- Refactor reconciler to remove maintenance mode and enhance suspension logic
- Update dependencies in Cargo.toml for reqwest and remove unused dev deps

BREAKING CHANGE: Removal of maintenance mode in reconciler may affect existing deployments relying on it. Suspension logic has been adjusted to handle scaling to zero directly.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,15 +42,12 @@ opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
 opentelemetry-otlp = { version = "0.14", features = ["grpc-tonic", "http-proto"] }
 
 # HTTP client for health checks
-reqwest = { version = "0.11", features = ["rustls-tls"] }
+reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
 
 # REST API (optional)
 axum = { version = "0.7", optional = true }
 tower = { version = "0.4", optional = true }
 tower-http = { version = "0.5", features = ["trace"], optional = true }
-
-# HTTP client for health checks
-reqwest = { version = "0.12", features = ["json"] }
 
 # Metrics
 prometheus-client = { version = "0.22", optional = true }
@@ -61,7 +58,6 @@ rest-api = ["axum", "tower", "tower-http"]
 metrics = ["prometheus-client"]
 
 [dev-dependencies]
-k8s-openapi = { version = "0.22", features = ["latest"] }
 tokio-test = "0.4"
 
 [[bin]]
