--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Audit for vulnerabilities
-        uses: actions-rust-lang/audit-check@v1
+        uses: actions-rs/audit-check@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
